<resources>
    <string name="app_name">SirBunksALot</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="construction">This activity is under construction</string>
    <string name="home">Go back to the home screen</string>
    <string name="newMember">New to our Family?</string>
    <string name="signup">Sign Up!</string>
    <string name="aboutus">About Us</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
</resources>
